[project]
name = "clent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
]

[project.scripts]
clent = "clent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
