[project]
name = "clent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
]

[project.scripts]
clent = "clent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
